Fix crash when there is an empty logging category

BUG: 475248